--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: 'Exo 2', sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -278,6 +278,7 @@ h3,
 h4,
 h5,
 h6 {
+        font-family: 'Cuprum', sans-serif;
 	clear: both;
 }
 
